Fix element break on print

--- a/ui/question-bank-ui/src/app/question-paper-generator/question-paper-generator.component.css
+++ b/ui/question-bank-ui/src/app/question-paper-generator/question-paper-generator.component.css
@@ -95,6 +95,7 @@ button:disabled {
     width: 60vw;
     margin-bottom: 4rem;
     padding: 5rem;
+    margin: auto;
 }
 
 .question{
@@ -147,7 +148,7 @@ button:disabled {
     gap: 1rem;
    }
 
-   @media print {
+   /* @media print {
          body {
            margin: 0;
            padding: 0;
@@ -181,7 +182,7 @@ button:disabled {
            display: none;
          }
 
-        }
+        } */
 .cdk-drag-preview {
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
    }
