--- a/ui/question-bank-ui/src/app/question-papers/question-paper-view/question-paper-view.component.css
+++ b/ui/question-bank-ui/src/app/question-papers/question-paper-view/question-paper-view.component.css
@@ -12,6 +12,8 @@
     width: 60vw;
     margin-bottom: 4rem;
     padding: 5rem;
+    margin: auto;
+
 }
 
 .question{
